# RANS-Solver-for-Aerodynamic-Applications

./: .gitignore  CMakeLists.txt  solver_config.txt
aeroelastic_solver/: CMakeLists.txt  compiler.h
aeroelastic_solver/aero/: CMakeLists.txt  euler_multigrid_solver.h  euler_simulation.h  euler_solver.h  rans_solver.h
aeroelastic_solver/aero/details/: euler_multigrid_solver.cpp  euler_simulation.cpp  euler_solver.cpp  rans_solver.cpp
aeroelastic_solver/cad/: CMakeLists.txt  Naca.h  VassbergJamesonGeometry.h  airfoil_types.h
aeroelastic_solver/cad/details/: Naca.cpp  VassbergJamesonGeometry.cpp
aeroelastic_solver/cad/docs/: TODO
aeroelastic_solver/mesh/: CMakeLists.txt  RansMesher.h  VassbergJamesonMesher.h  euler_mesher.h
aeroelastic_solver/mesh/details/: RansMesher.cpp  VassbergJamesonMesher.cpp  euler_mesher.cpp
scripts/: plot_normals.py  plot_ogrid.py  plot_rans_results.py
test_cases/: euler_mesh_test.cpp  rans_run.cpp  rans_solver_test.cpp  solver_test.cpp  test_rans_gradients.cpp  test_rans_mesh.cpp  test_vassberg_jameson_geometry.cpp  test_vassberg_jameson_mesh.cpp  test_viscous.cpp  testing_cad.cpp
